# instant-pastebin

./: README.md
backend/: .gitignore  Cargo.toml  flake.nix
backend/src/: main.rs
cli/: .gitignore  Cargo.toml  build.rs  flake.nix
cli/games/sdl2-doom/: .gitignore  CMakeLists.txt
cli/games/sdl2-doom/include/: callbacks.h
cli/games/sdl2-doom/src/: callbacks.c  entry.c  p_inter.c
cli/src/: client.rs  common.rs  doom.rs  main.rs  server.rs  signalling.rs  wordle.rs
frontend/: .gitignore  flake.nix  index.html  package-lock.json  package.json
frontend/games/wasmDOOM/: .gitignore  README.md
frontend/games/wasmDOOM/public/: index.html
frontend/games/wasmDOOM/public/scripts/: doom.js
frontend/games/wasmDOOM/public/styles/: styles.css
frontend/games/wasmDOOM/src/: Makefile  d_main.c  i_video.c  lib.js  p_inter.c  p_pspr.c
frontend/public/doom/: wasm-doom.wasm
frontend/src/: config.js  main.jsx
frontend/src/components/: App.jsx  Doom.jsx  Flappy.jsx  Game.jsx  GameShell.jsx  Layout.jsx  Receiver.jsx  Transmitter.jsx
frontend/src/doom/: wasm-doom.js
frontend/src/utils/: crypto.js  webrtc.js
