[package]
name = "instant-pastebin"
edition = "2024"

[dependencies]
webrtc = "0.14.0"
webrtc-signal = "0.1.1"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
clap = "3.2.25"
env_logger = "0.11.3"
chrono = "0.4.28"
log = "0.4"
anyhow = "1.0.100"
captures = "0.1.0"
bytes = "1.10.1"
